@@ -1,13 +1,13 @@
 Nebula RPC
 ==========
 
-Lightweight Network Communications and RPC Framework
+Lightweight Remote Procedure Call (RPC) Framework
 
 
 Features
 --------
 
-* Lightweight: **25 KB**
+* Lightweight: **12 KB**
 * Concise API
 * Modular Design
 
@@ -15,22 +15,22 @@ Features
 Documentation
 -------------
 
-### Socket
-A minimal framework for easy network communications.
+### Required VM Options (Foreign Function & Memory API)
+```
+--enable-preview
+```
 
-* auto reconnect on disconnection
-* configurable native TCP Keep-Alive (Linux, Mac & Windows only)
-* dynamic adding or removing node from endpoint
-* easy sending and receiving data
-
-Extra VM Options required for TCP Keep-Alive on Windows Platform
+### Extra VM Options (Windows Only for TCP Keep-Alive)
 ```
 --enable-native-access=ALL-UNNAMED
 --add-opens=java.base/java.net=ALL-UNNAMED
 --add-opens=java.base/java.io=ALL-UNNAMED
 ```
 
-### RPC
+
+Quick Start
+-----------
+
 ```java
 // Service Definition
 public interface HelloService {
@@ -43,8 +43,7 @@ server.addService(HelloService.class, new HelloImpl());
 server.start();
 
 // Start RPC Client and Send Request
-var client = new RpcClient(serverAddress);
-client.connect();
+var client = new RpcClient(serverAddress).connect();
 var service = client.of(HelloService.class);
 var rsp = service.hello(req);
 System.out.printf("req=%s, rsp=%s%n", req, rsp);
